tests/baselines/reference/typeParametersShouldNotBeEqual3.errors.txt
==== tests/cases/compiler/typeParametersShouldNotBeEqual3.ts (2 errors) ====
    function ff<T extends Object, U extends Object>(x: T, y: U) {
        var z: Object;
        x = x;  // Ok
        x = y;  // Ok
        ~
!!! error TS2011: Cannot convert 'U' to 'T'.
        x = z;  // Ok
        ~
!!! error TS2011: Cannot convert 'Object' to 'T'.
        z = x;  // Ok
    }
    